# resibo-eval

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
kaggle-eval/: kernel-metadata.json  resibo-eval-notebook.py
src/resibo_eval/: __init__.py
src/resibo_eval/eval/: build_test_set.py  pipeline.py  prompts.py  run_eval.py
src/resibo_eval/scrapers/: factcheck_scraper.py
